src/objects/PromoScale__c.object
<CustomObject>
    <description>Promo information related to the ticket scale</description>
    <fields>
        <fullName>AdPlan__c</fullName>
        <label>Ad Plan</label>
        <referenceTo>AdPlan__c</referenceTo>
        <relationshipLabel>Promo Scales</relationshipLabel>
        <relationshipName>PromoScales</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Price__c</fullName>
        <label>Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TicketScale__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Ticket Scale</label>
        <referenceTo>TicketScale__c</referenceTo>
        <relationshipLabel>Promo Scales</relationshipLabel>
        <relationshipName>Promo_Scales</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>fxPrice__c</fullName>
        <formula>(Price__c / (AdPlan__r.CurrencyExchange__r.ExchangeRate__c))</formula>
        <label>Price (USD)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>Promo Scale</label>
    <nameField>
        <label>Promo Scale Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Promo Scales</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>